// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amd transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    amd: {
        jQuery: true,
        kQuery: false
    }
}
"
`;

exports[`amd transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
		jQuery: false,
		kQuery: true
	}
};
"
`;

exports[`bail transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    bail: true
}
"
`;

exports[`bail transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: false,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
        jQuery: true,
        kQuery: false,
        bail: false
    }
};
"
`;

exports[`cache transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    cache: true
}
"
`;

exports[`cache transforms correctly using "other-0" data 2`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    cache: cacheVal
}
"
`;

exports[`cache transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: false,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
        jQuery: true,
        kQuery: false,
        cache: false
    }
};
"
`;

exports[`cache transforms correctly using "other-1" data 2`] = `
"module.exports = {
	bail: true,
	cache: cacheKey,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
        jQuery: true,
        kQuery: false,
        cache: cacheKey
    }
};
"
`;

exports[`merge transforms correctly using "other-0" data 1`] = `
"module.exports = merge(myConfig, {
	entry: 'index.js',
	output: {
		filename: 'bundle.js'
	}
});
"
`;

exports[`merge transforms correctly using "other-1" data 1`] = `
"module.exports = merge(TheirConfig, {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
		jQuery: true,
		kQuery: false
	}
});
"
`;

exports[`parallelism transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    parallelism: 10
}
"
`;

exports[`parallelism transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 20,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
        jQuery: true,
        kQuery: false,
        parallelism: 20
    }
};
"
`;

exports[`profile transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    profile: true
}
"
`;

exports[`profile transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: false,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
        jQuery: true,
        kQuery: false,
        profile: false
    }
};
"
`;

exports[`recordsInputPath transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    recordsInputPath: path.join('dist', mine)
}
"
`;

exports[`recordsInputPath transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: path.join('dist', ours),
	recordsOutputPath: 'else',
	recordsPath: 'Brooklyn',
	amd: {
		jQuery: true,
		kQuery: false
	}
};
"
`;

exports[`recordsOutputPath transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    recordsOutputPath: path.join('src', yours)
}
"
`;

exports[`recordsOutputPath transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: path.join('src', theirs),
	recordsPath: 'Brooklyn',
	amd: {
		jQuery: true,
		kQuery: false
	}
};
"
`;

exports[`recordsPath transforms correctly using "other-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    recordsPath: path.join(__dirname, 'records.json')
}
"
`;

exports[`recordsPath transforms correctly using "other-1" data 1`] = `
"module.exports = {
	bail: true,
	cache: true,
	profile: true,
	merge: 'NotMuch',
	parallelism: 69,
	recordsInputPath: 'something',
	recordsOutputPath: 'else',
	recordsPath: path.resolve(__dirname, 'gradle.json'),
	amd: {
		jQuery: true,
		kQuery: false
	}
};
"
`;
